[gd_scene load_steps=18 format=2]

[ext_resource path="res://player/PlayerContainer.gd" type="Script" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://addons/qodot/textures/base/dev_grey_256.png" type="Texture" id=3]
[ext_resource path="res://assets/thud.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/thruster.wav" type="AudioStream" id=5]
[ext_resource path="res://player/Arm.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/HUD3D.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/ArmJoint.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/textures/poof.png" type="Texture" id=10]

[sub_resource type="World" id=1]

[sub_resource type="SphereShape" id=2]
radius = 0.36481

[sub_resource type="SpatialMaterial" id=3]
params_blend_mode = 1
albedo_texture = ExtResource( 3 )

[sub_resource type="CapsuleMesh" id=4]
material = SubResource( 3 )
flip_faces = true
radius = 0.4
mid_height = 0.2

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 10 )

[sub_resource type="ParticlesMaterial" id=6]

[sub_resource type="QuadMesh" id=7]

[node name="PlayerContainer" type="Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="CanvasLayer/ViewportContainer"]
size = Vector2( 640, 360 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Hud3D" parent="CanvasLayer/ViewportContainer/Viewport" instance=ExtResource( 7 )]

[node name="Player" type="RigidBody" parent="."]
gravity_scale = 0.0
continuous_cd = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 3.25841e-07, 0, 3.25841e-07, 1, 3.25841e-07, 1.06581e-13, 3.25841e-07, -1, 0, 0, 0 )
current = true
fov = 80.0

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.93014e-09, 0, 0.112788 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1, -1.41787e-14, 0, 0, 1, 0, 0, 6.19773e-22, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="SpotLight" type="SpotLight" parent="Player"]
transform = Transform( 1, -1.36812e-08, 3.42024e-09, -1.39176e-08, -0.918315, 0.39585, -2.27485e-09, -0.39585, -0.918315, 0, 0.277194, 0.4 )
light_color = Color( 0.905882, 0.905882, 0.905882, 1 )
light_energy = 2.17
light_indirect_energy = 1.76
shadow_enabled = true
spot_range = 15.0

[node name="ThudPlayer" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 4 )

[node name="ForwardThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14076e-08, 0, -0.260976 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="LeftThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.33822, 0, 0.0140235 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="DownThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.35095e-09, 0.469968, 0.0906607 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="UpThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.35095e-09, -0.554696, 0.0906607 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="RightThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.349697, 0, 0.0140234 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="BackwardThrustPlayer" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.71203e-08, 0, 0.391668 )
stream = ExtResource( 5 )
unit_db = -30.0
max_db = 6.0

[node name="OmniLight" type="OmniLight" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.91402e-08, 0, 0.666651 )
visible = false
light_color = Color( 0.709804, 0.964706, 0.254902, 1 )
light_energy = 1.07
omni_range = 0.709745
omni_attenuation = 0.870551

[node name="Particles" type="Particles" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12196e-07, 1.15954, -2.56675 )
material_override = SubResource( 5 )
emitting = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="LeftArmJoint" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 1.21181e-08, -1.71334e-09, -1.21181e-08, 0.960803, -0.277231, -1.71334e-09, 0.277231, 0.960803, 0.35, -1.11759e-08, -0.21385 )

[node name="LeftArm" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 1.21181e-08, -1.71334e-09, -1.21181e-08, 0.960803, -0.277231, -1.71334e-09, 0.277231, 0.960803, 0.35, -1.11759e-08, -0.21385 )
mass = 1.0

[node name="RightArmJoint" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 1.21181e-08, -1.71334e-09, -1.21181e-08, 0.960803, -0.277231, -1.71334e-09, 0.277231, 0.960803, -0.35, 7.45058e-09, -0.21385 )
nodes/node_b = NodePath("../RightArm")
angular_limit_y/upper_angle = 25.0
angular_limit_y/lower_angle = -10.0

[node name="RightArm" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 1.21181e-08, -1.71334e-09, -1.21181e-08, 0.960803, -0.277231, -1.71334e-09, 0.277231, 0.960803, -0.35, 7.45058e-09, -0.21385 )
mass = 1.0
